# l10n-romania

./: .codecov.yml  .copier-answers.yml  .flake8  .flake8.rej  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pre-commit-config.yaml.rej  .pylintrc-mandatory  .ruff.toml  .travis.yml  README.md  difff.txt  mig_module.sh  oca_dependencies.txt  requirements.txt  test-requirements.txt
account_edi_ubl_bis3/: README.rst  __manifest__.py
currency_rate_update_RO_BNR/: README.rst  __manifest__.py
diginesis_base_ubl/: __manifest__.py
diginesis_base_ubl_payment/: __manifest__.py
diginesis_base_unece/: __manifest__.py
diginesis_invoice_ubl/: __init__.py  __manifest__.py
diginesis_tax_unece/: __manifest__.py
diginesis_uom_unece/: __manifest__.py
l10n_ro_account/: README.rst  __init__.py  __manifest__.py
l10n_ro_account_anaf_sync/: README.rst  __manifest__.py
l10n_ro_account_bank_statement_import_mt940_alpha/: README.rst  __manifest__.py
l10n_ro_account_bank_statement_import_mt940_base/: README.rst  __manifest__.py
l10n_ro_account_bank_statement_import_mt940_bcr/: README.rst  __manifest__.py
l10n_ro_account_bank_statement_import_mt940_brd/: README.rst  __init__.py  __manifest__.py  __openerp__.py
l10n_ro_account_bank_statement_import_mt940_bt/: README.rst  __manifest__.py
l10n_ro_account_bank_statement_import_mt940_ing/: README.rst  __manifest__.py
l10n_ro_account_bank_statement_import_mt940_rffsn/: README.rst  __manifest__.py
l10n_ro_account_bank_statement_report/: README.rst  __manifest__.py
l10n_ro_account_compensation/: __manifest__.py
l10n_ro_account_edi_ubl/: README.rst  __init__.py  __manifest__.py  init_hook.py
l10n_ro_account_edit_currency_rate/: README.rst  __manifest__.py
l10n_ro_account_period_close/: README.rst  __manifest__.py
l10n_ro_account_report/: __manifest__.py
l10n_ro_account_report_balance_sheet/: README.rst  __manifest__.py
l10n_ro_account_report_invoice/: README.rst  __manifest__.py  init_hook.py
l10n_ro_account_report_journal/: README.rst  __manifest__.py
l10n_ro_account_spv/: README.rst  __manifest__.py
l10n_ro_address_extended/: README.rst  __manifest__.py  init_hook.py
l10n_ro_cash_payment_sequence/: README.rst  __init__.py  __manifest__.py
l10n_ro_city/: README.rst  __init__.py  __manifest__.py
l10n_ro_config/: README.rst  __init__.py  __manifest__.py  __openerp__.py  init_hook.py
l10n_ro_currency_reevaluation/: README.rst  __manifest__.py
l10n_ro_duk_integrator/: README.rst  __init__.py  __manifest__.py
l10n_ro_dvi/: README.rst  README.txt  __init__.py  __manifest__.py
l10n_ro_e_invoice/: README.rst  __manifest__.py
l10n_ro_edi_ubl/: README.rst  __manifest__.py
l10n_ro_etransport/: README.rst  __manifest__.py
l10n_ro_fiscal_validation/: README.rst  __manifest__.py
l10n_ro_hr/: README.rst  __manifest__.py
l10n_ro_hr_contract/: README.rst  __init__.py  __manifest__.py
l10n_ro_hr_medical_holidays/: README.rst  __manifest__.py
l10n_ro_hr_payroll/: README.rst  __init__.py  __manifest__.py
l10n_ro_intrastat/: README.rst  __manifest__.py
l10n_ro_isolation/: README.rst  __manifest__.py
l10n_ro_journal_register/: README.rst  __init__.py  __manifest__.py
l10n_ro_message_spv/: README.rst  __init__.py  __manifest__.py
l10n_ro_nondeductible_vat/: README.rst  __manifest__.py
l10n_ro_partner_anaf_detailed/: __manifest__.py
l10n_ro_partner_create_by_vat/: README.rst  __manifest__.py  __openerp__.py
l10n_ro_partner_statement/: README.rst  __init__.py  __manifest__.py
l10n_ro_partner_unique/: README.rst  __init__.py  __manifest__.py  __openerp__.py
l10n_ro_payment_receipt_report/: README.rst  __manifest__.py  hooks.py  payment_receipt_report_restore.xml
l10n_ro_payment_to_statement/: README.rst  __init__.py  __manifest__.py
l10n_ro_pos/: README.rst  __init__.py  __manifest__.py
l10n_ro_report_D300/: README.rst  __manifest__.py
l10n_ro_report_trial_balance/: README.rst  __manifest__.py
l10n_ro_siruta/: README.rst  __init__.py  __manifest__.py  __openerp__.py  hooks.py
l10n_ro_stock/: README.rst  README.txt  __manifest__.py
l10n_ro_stock_account/: README.rst  README.txt  __init__.py  __manifest__.py  init_hook.py
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+1894 files in other folders)
