[project]
name = "odoo-addons-oca-l10n-romania"
version = "17.0.20240906.4"
dependencies = [
    "odoo-addon-currency_rate_update_RO_BNR>=17.0dev,<17.1dev",
    "odoo-addon-l10n_ro_account>=17.0dev,<17.1dev",
    "odoo-addon-l10n_ro_account_anaf_sync>=17.0dev,<17.1dev",
    "odoo-addon-l10n_ro_account_bank_statement_import_mt940_alpha>=17.0dev,<17.1dev",
    "odoo-addon-l10n_ro_account_bank_statement_import_mt940_base>=17.0dev,<17.1dev",
    "odoo-addon-l10n_ro_account_bank_statement_import_mt940_bcr>=17.0dev,<17.1dev",
    "odoo-addon-l10n_ro_account_bank_statement_import_mt940_brd>=17.0dev,<17.1dev",
    "odoo-addon-l10n_ro_account_bank_statement_import_mt940_ing>=17.0dev,<17.1dev",
    "odoo-addon-l10n_ro_account_bank_statement_import_mt940_rffsn>=17.0dev,<17.1dev",
    "odoo-addon-l10n_ro_account_bank_statement_report>=17.0dev,<17.1dev",
    "odoo-addon-l10n_ro_account_period_close>=17.0dev,<17.1dev",
    "odoo-addon-l10n_ro_account_report_invoice>=17.0dev,<17.1dev",
    "odoo-addon-l10n_ro_city>=17.0dev,<17.1dev",
    "odoo-addon-l10n_ro_config>=17.0dev,<17.1dev",
    "odoo-addon-l10n_ro_dvi>=17.0dev,<17.1dev",
    "odoo-addon-l10n_ro_etransport>=17.0dev,<17.1dev",
    "odoo-addon-l10n_ro_fiscal_validation>=17.0dev,<17.1dev",
    "odoo-addon-l10n_ro_message_spv>=17.0dev,<17.1dev",
    "odoo-addon-l10n_ro_nondeductible_vat>=17.0dev,<17.1dev",
    "odoo-addon-l10n_ro_partner_create_by_vat>=17.0dev,<17.1dev",
    "odoo-addon-l10n_ro_partner_unique>=17.0dev,<17.1dev",
    "odoo-addon-l10n_ro_payment_receipt_report>=17.0dev,<17.1dev",
    "odoo-addon-l10n_ro_payment_to_statement>=17.0dev,<17.1dev",
    "odoo-addon-l10n_ro_pos>=17.0dev,<17.1dev",
    "odoo-addon-l10n_ro_stock>=17.0dev,<17.1dev",
    "odoo-addon-l10n_ro_stock_account>=17.0dev,<17.1dev",
    "odoo-addon-l10n_ro_stock_account_date>=17.0dev,<17.1dev",
    "odoo-addon-l10n_ro_stock_account_date_wizard>=17.0dev,<17.1dev",
    "odoo-addon-l10n_ro_stock_account_landed_cost>=17.0dev,<17.1dev",
    "odoo-addon-l10n_ro_stock_account_notice>=17.0dev,<17.1dev",
    "odoo-addon-l10n_ro_stock_account_reception_in_progress>=17.0dev,<17.1dev",
    "odoo-addon-l10n_ro_stock_account_tracking>=17.0dev,<17.1dev",
    "odoo-addon-l10n_ro_stock_picking_comment_template>=17.0dev,<17.1dev",
    "odoo-addon-l10n_ro_stock_picking_valued_report>=17.0dev,<17.1dev",
    "odoo-addon-l10n_ro_stock_price_difference>=17.0dev,<17.1dev",
    "odoo-addon-l10n_ro_stock_report>=17.0dev,<17.1dev",
    "odoo-addon-l10n_ro_vat_on_payment>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
