[project]
name = "odoo-addons-oca-l10n-romania"
version = "18.0.20241018.0"
dependencies = [
    "odoo-addon-l10n_ro_city==18.0.*",
    "odoo-addon-l10n_ro_config==18.0.*",
    "odoo-addon-l10n_ro_partner_create_by_vat==18.0.*",
    "odoo-addon-l10n_ro_stock==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
